--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -60,6 +60,8 @@
                                     <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
                                         <a href="https://www.facebook.com/Akhildasaki"><img
                                                 src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://x.com/Akhildas2Aki?t=jzUwZ2o_sazydId68AYn4g&s=09"><img
+                                                src="/imgs/theme/icons/icon-twitter.svg" alt="twr"></a>
                                         <a href="https://www.instagram.com/akhildas___2___aki/"><img
                                                 src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
                                     </div>
@@ -76,6 +78,8 @@
                                     <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
                                         <a href="https://www.facebook.com/Akhildasaki"><img
                                                 src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://x.com/Akhildas2Aki?t=jzUwZ2o_sazydId68AYn4g&s=09"><img
+                                                src="/imgs/theme/icons/icon-twitter.svg" alt="twr"></a>
                                         <a href="https://www.instagram.com/akhildas___2___aki/"><img
                                                 src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
                                     </div>
@@ -91,6 +95,8 @@
                                     <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
                                         <a href="https://www.facebook.com/Akhildasaki"><img
                                                 src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://x.com/Akhildas2Aki?t=jzUwZ2o_sazydId68AYn4g&s=09"><img
+                                                src="/imgs/theme/icons/icon-twitter.svg" alt="twr"></a>
                                         <a href="https://www.instagram.com/akhildas___2___aki/"><img
                                                 src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
                                     </div>
@@ -107,6 +113,8 @@
                                     <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
                                         <a href="https://www.facebook.com/Akhildasaki"><img
                                                 src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://x.com/Akhildas2Aki?t=jzUwZ2o_sazydId68AYn4g&s=09"><img
+                                                src="/imgs/theme/icons/icon-twitter.svg" alt="twr"></a>
                                         <a href="https://www.instagram.com/akhildas___2___aki/"><img
                                                 src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
                                     </div>
