formated pages, fixed bug in otp ,create reusable code,fixed bug in google auth

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -9,6 +9,12 @@
                 .btn i {
                     margin-left: 10px;
                 }
+
+                .login_wrap {
+                    max-width: 500px;
+                    width: 100%;
+                    margin: auto;
+                }
             </style>
             <main class="main">
                 <div class="page-header breadcrumb-wrap">
@@ -68,13 +74,7 @@
                                         <div class="divider-text-center mt-15 mb-15">
                                             <span> or</span>
                                         </div>
-                                        <ul class="btn-login list_none text-center mb-15">
-                                            <li>
-                                                <a href="#"
-                                                    class="btn btn-facebook hover-up mb-lg-3 mb-sm-4 rounded-pill">
-                                                    Sign in With <i class="fab fa-facebook-f"></i>
-                                                </a>
-                                            </li>
+                                        <ul class="btn-login list_none text-center mb-15 mt-15">
                                             <li>
                                                 <a href="/google" class="btn btn-google hover-up rounded-pill">
                                                     Sign in With <i class="fab fa-google"></i>
