--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -8,6 +8,12 @@
             .btn i {
                 margin-left: 10px;
             }
+
+            .login_wrap {
+                max-width: 500px;
+                width: 100%;
+                margin: auto;
+            }
         </style>
         <main class="main">
             <div class="page-header breadcrumb-wrap">
@@ -73,30 +79,25 @@
                                             <span id="confirmPasswordError" class="error"></span>
                                             <i id="confirmPasswordLoading" class="fas fa-spinner fa-spin hidden"></i>
                                         </div>
-                                        <div class="form-group text-center">
+                                        <div class="form-group text-center mb-10 mt-10">
                                             <button type="submit"
                                                 class="btn btn-fill-out btn-block hover-up rounded-pill">
                                                 Verify Email <i class="fas fa-envelope"></i>
                                             </button>
                                         </div>
                                     </form>
-                                    <div class="divider-text-center">
+                                    <div class="divider-text-center mb-10 mt-10">
                                         <span> or</span>
                                     </div>
-                                    <ul class="btn-login list_none text-center">
-                                        <li>
-                                            <a href="#" class="btn btn-facebook hover-up mt-5 rounded-pill">
-                                                Sign Up With <i class="fab fa-facebook-f"></i>
-                                            </a>
-                                        </li>
+                                    <ul class="btn-login list_none text-center mb-10 mt-10">
                                         <li>
                                             <a href="/google" class="btn btn-google hover-up rounded-pill">
                                                 Sign Up With <i class="fab fa-google"></i>
                                             </a>
                                         </li>
                                     </ul>
-                                    <div class="text-center mt-10">Already have an account? <a href="/login">Sign
-                                        in now</a></div>
+                                    <div class="text-center">Already have an account? <a href="/login">Sign
+                                            in now</a></div>
                                 </div>
                             </div>
                         </div>
